# MyNotes

./: .gitignore  CMakeLists.txt  UML.drawio
src/: Collection.cpp  Collection.h  CollectionManager.cpp  CollectionManager.h  FavouriteCollection.cpp  FavouriteCollection.h  Interface.cpp  Interface.h  Note.cpp  Note.h  Observer.h  Subject.h  main.cpp
test/: CMakeLists.txt  CollectionManagerTest.cpp  CollectionTest.cpp
